k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omnipanel-go
  labels:
    app: omnipanel-go
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: omnipanel-go
